# LILIES

./: .gitignore  README.md  package-lock.json  pyproject.toml
data/: sqlitedata.db
data/gspanel/: qq-uid.json
qqbot/: __init__.py
qqbot/plugins/: README.md  config.py  pyproject.toml
qqbot/plugins/gachalogs/: __init__.py
qqbot/plugins/gspanel/: __init__.py  __utils__.py  data_convert.py  data_source.py  data_updater.py
qqbot/plugins/guapi/: __init__.py  config.py
qqbot/plugins/guapi/libs/: MDTDataStream.py  __init__.py
qqbot/plugins/guapi/plugins/: Mcserverstate.py  Mcwiki.py  MdtCNproperties.py  Mdtserverstate.py  battlefield.py  chatrecorder.py  hello.py  help.py  hypinfo.py  qqserverstate.py  randimage.py  serverstate.py  sign.py  test2.py.tets  weather.py
qqbot/plugins/guapi/plugins/data/: bundle_zh_CN.properties  wikilist.json
qqbot/plugins/guapi/utils/: Mcapi.py  Mcserverstate.py  McskinHead.py  MdtServerstate.py  bfapi.py  bing_image.py  clearfiles.py  ppeteer.py  redisdata.py  sqlite.py  test.py.test  toplist.py
qqbot/plugins/guapi/webs/: webs.py
qqbot/plugins/guapi/webs/static/css/: Mcserver.css  bf1.css  bf2042.css  bfv.css  botstate.css  hypinfo.css  index.css  serverstate.css
qqbot/plugins/guapi/webs/static/js/: Mcmotd.js  Mcserver.js  bf1.js  bf2042.js  bfv.js  botstate.js  hypinfo.js  index.js  serverstate.js  vehicles.js  weapons.js
qqbot/plugins/guapi/webs/templates/: Mcserver.html  bf1.html  bf2042.html  bfv.html  hypinfo.html  index.html  serverstate.html  test.html  test.json  vehicles.html  weapons.html
(+1 files in other folders)
